styling slide deck for coshx

--- a/test-three/demo.html
+++ b/test-three/demo.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A framework for easily creating beautiful presentations using HTML by @hakimel. Ported to Pug by @jlengstorf.">
     <link rel="stylesheet" href="css/reveal.css">
     <link id="theme" rel="stylesheet" href="css/theme/coshx.css">
-    <link rel="stylesheet" href="lib/css/zenburn.css">
+    <link rel="stylesheet" href="lib/css/coshx-code.css">
     <script>
       var link = document.createElement( 'link' );
       link.rel = 'stylesheet';
