--- a/test-three/index.html
+++ b/test-three/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Slide framework by @hakimel. Ported to Pug by @jlengstorf. Customized by @gopalmetro @coshxlabs">
     <link rel="stylesheet" href="css/reveal.css">
     <link id="theme" rel="stylesheet" href="css/theme/coshx.css">
-    <link rel="stylesheet" href="lib/css/coshx-code.css">
+    <link rel="stylesheet" href="lib/css/docco.css">
     <script>
       var link = document.createElement( 'link' );
       link.rel = 'stylesheet';
