clean up unused files; clean up core files; add and edit print stylesheets

--- a/test-three/demo.html
+++ b/test-three/demo.html
@@ -7,12 +7,12 @@
     <meta name="description" content="A framework for easily creating beautiful presentations using HTML by @hakimel. Ported to Pug by @jlengstorf.">
     <link rel="stylesheet" href="css/reveal.css">
     <link id="theme" rel="stylesheet" href="css/theme/coshx.css">
-    <link rel="stylesheet" href="lib/css/docco.css">
+    <link rel="stylesheet" href="lib/css/coshx-highlighting.css">
     <script>
       var link = document.createElement( 'link' );
       link.rel = 'stylesheet';
       link.type = 'text/css';
-      link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
+      link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/coshx-pdf.css' : 'css/print/coshx-paper.css';
       document.getElementsByTagName( 'head' )[0].appendChild( link );
       
     </script>
@@ -23,7 +23,7 @@
         <section>
           <h1>reveal.js + Pug</h1>
           <h3>The HTML Presentation Framework</h3>
-          <p><small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="https://twitter.com/hakimel">@hakimel</a></small></p>
+          <p><small>Created by <a href="author url goes here">author name goes here</a> / <a href="https://twitter.com/author twitter goes here">@author twitter goes here</a></small></p>
           <p><small>Ported to <a href="https://pugjs.org">Pug</a> by 
               <a href="http://lengstorf.com">Jason Lengstorf</a> / 
               <a href="https://twitter.com/jlengstorf">jlengstorf</a>
