--- a/test-three/index.html
+++ b/test-three/index.html
@@ -7,12 +7,12 @@
     <meta name="description" content="Slide framework by @hakimel. Ported to Pug by @jlengstorf. Customized by @gopalmetro @coshxlabs">
     <link rel="stylesheet" href="css/reveal.css">
     <link id="theme" rel="stylesheet" href="css/theme/coshx.css">
-    <link rel="stylesheet" href="lib/css/docco.css">
+    <link rel="stylesheet" href="lib/css/coshx-highlighting.css">
     <script>
       var link = document.createElement( 'link' );
       link.rel = 'stylesheet';
       link.type = 'text/css';
-      link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
+      link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/coshx-pdf.css' : 'css/print/coshx-paper.css';
       document.getElementsByTagName( 'head' )[0].appendChild( link );
       
     </script>
