still not luck with variables, but added a few more slides.

--- a/test-three/index.html
+++ b/test-three/index.html
@@ -52,6 +52,17 @@
           </ul>
         </section>
         <section data-background-size="contain" data-background-image="/images/coshx-background.png">
+          <h1>Slide 2 Code</h1>
+          <h6>content</h6>
+          <pre class="pug"><code class="code-line-wrap">h1  Ruby, Rails, & some puppet
+ul
+   li Instructor: Ben Taitelbaum
+   li Slides:
+       a(href="https://coshx.com/talks" target="_blank")  https://coshx.com/talks
+   li Completed Labs:
+       a(href= "https://github.com/btaitelb/ruby_rails_puppet_training" target="_blank") https://github.com/btaitelb/ruby_rails_puppet_training</code></pre>
+        </section>
+        <section data-background-size="contain" data-background-image="/images/coshx-background.png">
           <h1>Course Flow</h1>
           <div class="x-large">
             <ol>
@@ -87,6 +98,39 @@
               </li>
             </ol>
           </div>
+        </section>
+        <section data-background-size="contain" data-background-image="/images/coshx-background.png">
+          <h1>Slide 3 Code</h1>
+          <h6>content part 1</h6>
+          <pre class="pug"><code class="code-line-wrap">+slide(data-background-size="contain" data-background-image="/images/coshx-background.png")
+   h1 Course Flow
+   .x-large
+       ol
+         li Ruby
+           ol
+             li Build a game in Ruby
+             li Package the game as a gem
+             li Expose some logic via the server
+         li Rails
+           ol
+             li Configure & manage
+             li Graphical front-end
+             li Persistent Storage</code></pre>
+        </section>
+        <section data-background-size="contain" data-background-image="/images/coshx-background.png">
+          <h1>Slide 3 Code</h1>
+          <h6>content part 2</h6>
+          <pre class="pug"><code class="code-line-wrap">           ol
+             li Puppet
+               ol
+                 li Define game resources
+                 li Read configurations from Rails as facts
+                 li Demonstrate the Ruby we've learned
+             li other stuff
+               ol
+                 li Advanced topics
+                 li Team-specific
+                 li Creative</code></pre>
         </section>
         <section data-background-size="contain" data-background-image="/images/coshx-background.png">
           <h1>Philosophy
