--- a/test-three/demo.html
+++ b/test-three/demo.html
@@ -6,7 +6,7 @@
     <title>reveal.js + Pug - The HTML Presentation Framework</title>
     <meta name="description" content="A framework for easily creating beautiful presentations using HTML by @hakimel. Ported to Pug by @jlengstorf.">
     <link rel="stylesheet" href="css/reveal.css">
-    <link id="theme" rel="stylesheet" href="css/theme/coshx.css">
+    <link id="theme" rel="stylesheet" href="css/theme/theme name goes here.css">
     <link rel="stylesheet" href="lib/css/coshx-highlighting.css">
     <script>
       var link = document.createElement( 'link' );
